test/ui/tests/metadata/unexpected-key-in-list.stderr
error: found identifier but expected value
 --> ${TEST_FOLDER}/metadata/unexpected-key-in-list.metadata:3:8
  |
3 | list: [first: 0, second: 2]
  |        ^^^^^ 
  |

error: aborting due to previous error

